homePage bug overflow corrected

--- a/src/styles/articleCard.scss
+++ b/src/styles/articleCard.scss
@@ -25,9 +25,3 @@
     line-height: 100%;
     text-align: justify;
 }
-
-/* this class is used to animate the box container when it appears on the screen */
-.fadeAndMoveFromBelow {
-	transform: translateY(0);
-	opacity: 1;
-}
