--- a/src/styles/homePage.scss
+++ b/src/styles/homePage.scss
@@ -5,10 +5,8 @@
 
 .robotName {
     position: absolute;
-    top: 0vh;
-    right: 0;
-    padding-top: 20vh;
-    padding-bottom: 20vh;
+    top: 20vh;
+    right: 20px;
     z-index: 2;
     font-size: 15vw;
     font-weight: bold;
